решение финального задания спринта 15